--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "url": "git://github.com/11ty/eleventy-base-blog.git"
   },
   "author": {
-    "name": "Zach Leatherman",
-    "email": "zachleatherman@gmail.com",
-    "url": "https://zachleat.com/"
+    "name": "Kıta Yazılım",
+    "email": "info@kitayazilim.com",
+    "url": "https://kitayazilim.com/"
   },
   "license": "MIT",
   "bugs": {
